--- a/.gitignore
+++ b/.gitignore
@@ -28,51 +28,118 @@ MANIFEST
 venv/
 ENV/
 env/
+.conda/
 
 # Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
+.envrc
+.flaskenv
 
-# IDE
+# IDE & Editors
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
+.project
+.settings/
+.pydevproject
 
-# Node.js
+# Node.js & NPM
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.npm/
+.yarn/
+.pnpm-debug.log*
+.pnpm-store/
 
-# Build outputs
+# Frontend Build outputs
 /client/dist/
 /client/build/
+/client/.next/
+/client/out/
+/client/.nuxt/
+/client/.vitepress/dist/
+
+# Frontend Cache & Temp
+.turbo/
+.parcel-cache/
+.cache/
+.temp/
+.tmp/
 
 # Logs
 *.log
 logs/
+lerna-debug.log*
+.pnpm-debug.log*
 
 # Database
 *.db
 *.sqlite
+*.sqlite3
+capecontrol.db
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+Desktop.ini
 
 # Temporary files
 *.tmp
 *.temp
+*.swp
+*.swo
+*~
 
-# AWS
+# AWS & Cloud
 .aws/
+.serverless/
 
-# Docker
-.dockerignore
+# Testing
+.coverage
+htmlcov/
+.tox/
+.pytest_cache/
+.nyc_output/
+coverage/
+*.cover
+.hypothesis/
 
 # Local development
 *.local
+.localhistory/
+.history/
+
+# Documentation build
+/docs/_build/
+/docs/build/
+
+# Backup files
+*.bak
+*.backup
+*.orig
+
+# Archive directories
+localstorm-main*/
+archive/
+backup/
+
+# Development session files
+DEVELOPMENT_SESSION_SUMMARY.md
+DEBUGGING_*.md
+SESSION_*.md
+
+# Production files that shouldn't be in repo
+PRODUCTION_*.md
+CRITICAL_*.md
+SECRET_*.md
