🖼️ Implement comprehensive PNG image preservation system
✅ Core Protection Features:
- Removed --delete flag from S3 sync to prevent accidental image deletion
- Created comprehensive PNG preservation script for all image assets
- Added verification system to check S3 image integrity
- Integrated PNG preservation into build and deployment workflows

🛠️ New Scripts Added:
- scripts/preserve-png-images.sh - Upload all PNG images to S3 with proper headers
- scripts/verify-png-images.sh - Verify all 13 critical PNG images exist in S3
- Enhanced scripts/upload-to-s3.sh - Safe sync without deletion + PNG backup

📦 Package.json Integration:
- npm run preserve:png - Upload all PNG images to S3
- npm run verify:png - Check PNG image integrity in S3
- Enhanced heroku-postbuild - Automatic PNG preservation during deployment

🎯 Image Assets Protected:
- Core branding: LogoC.png, LogoW.png, capecontrol-logo.png
- PWA icons: All sizes (64x64, 128x128, 192x192, 512x512)
- Favicons: 16x16, 32x32, apple-touch-icon
- Mobile icons: Android Chrome variants
- Landing assets: landing01.png

📋 Documentation:
- PNG_PRESERVATION_GUIDE.md - Complete implementation guide
- 39 total PNG files identified and protected
- S3 CDN integration for optimal performance

🚀 Production Benefits:
- Zero data loss during deployments
- Automatic backup of all image assets
- Fast CDN delivery from S3
- Easy recovery system for missing images
- Proper content-type headers for all PNG files

--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
 
     "upload": "bash ../scripts/upload-to-s3.sh",
     "deploy:static": "bash ../scripts/deploy-static-assets.sh",
+    "preserve:png": "bash ../scripts/preserve-png-images.sh",
+    "verify:png": "bash ../scripts/verify-png-images.sh",
 
-    "heroku-postbuild": "npm install && npm run build && npm run upload",
+    "heroku-postbuild": "npm install && npm run build && npm run upload && npm run preserve:png",
     "purge:cloudflare": "echo '🔄 Add curl call to Cloudflare API here'",
 
     "lint": "eslint . --max-warnings 10",
