🔧 Fix manifest upload and enhance deployment workflow
✅ Upload Script Fixes:
- Fixed upload-manifest.sh path from ../backend to backend for correct execution
- Removed --acl public-read parameter causing S3 access control errors
- Added proper --content-type application/manifest+json header
- Successfully uploaded site.webmanifest to S3 CDN

📦 Package.json Enhancements:
- Added verify:manifest command to check manifest.json exists after build
- Enhanced deploy:static to upload manifest.json directly to S3
- Improved build process to include manifest verification
- Streamlined heroku-postbuild with better asset deployment

🚀 GitHub Workflow Improvements:
- Consolidated S3 upload steps for better efficiency
- Enhanced step descriptions for clearer deployment process
- Combined upload and deploy:static commands in single step
- Improved workflow readability and maintenance

⚡ Build System Updates:
- Updated cache-busting timestamp to v=1753332232848
- Fresh build assets with latest changes
- Enhanced manifest.json handling in deployment pipeline
- Better error handling for missing manifest files

🌐 S3 Integration:
- site.webmanifest now properly hosted on S3 CDN
- All static assets optimized for production delivery
- Improved PWA manifest accessibility
- Enhanced offline capability support

--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -29,21 +29,15 @@ jobs:
         working-directory: client
         run: npm ci
 
-      - name: 🧩 Build frontend (includes cache-bust)
+      - name: 🧩 Build frontend (includes manifest.json)
         working-directory: client
         run: npm run build
 
-      - name: ☁️ Upload built assets to S3
+      - name: ☁️ Upload all built assets (incl. manifest) to S3
         working-directory: client
-        run: npm run upload
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ env.AWS_DEFAULT_REGION }}
-
-      - name: 📤 Upload static assets to S3 (manifest, icons, etc.)
-        working-directory: client
-        run: npm run deploy:static
+        run: |
+          npm run upload
+          npm run deploy:static
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
