--- a/client/package.json
+++ b/client/package.json
@@ -4,25 +4,27 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "start": "vite preview",
-    "build": "vite build && npm run cache-bust && npm run copy",
+  "dev": "vite",
+  "start": "vite preview",
+  "build": "vite build && npm run cache-bust && npm run copy && npm run verify:manifest",
+
+  "cache-bust": "node ../scripts/cache-bust.cjs",
+  "copy": "if [ \"$INSIDE_DOCKER\" != \"true\" ]; then echo '📦 Copying to backend...'; mkdir -p ../backend/app/static && rm -rf ../backend/app/static/* && cp -a dist/. ../backend/app/static/; else echo '🚫 Skipping copy in Docker'; fi",
+
+  "upload": "bash ../scripts/upload-to-s3.sh",  
+  "deploy:static": "aws s3 cp dist/manifest.json s3://lightning-s3/static/website/manifest.json --content-type application/json",
+  "preserve:png": "bash ../scripts/preserve-png-images.sh",
+  "verify:png": "bash ../scripts/verify-png-images.sh",
+  "verify:manifest": "test -f dist/manifest.json && echo '✅ manifest.json found' || echo '❌ manifest.json missing'",
+
+  "heroku-postbuild": "npm install && npm run build && npm run upload && npm run deploy:static && npm run preserve:png",
+  "purge:cloudflare": "echo '🔄 Add curl call to Cloudflare API here'",
+
+  "lint": "eslint . --max-warnings 10",
+  "reorganize:assets": "bash ../scripts/reorganize-assets.sh"
+},
 
 
-    "cache-bust": "node ../scripts/cache-bust.cjs",
-    "copy": "if [ \"$INSIDE_DOCKER\" != \"true\" ]; then echo '📦 Copying to backend...'; mkdir -p ../backend/app/static && rm -rf ../backend/app/static/* && cp -a dist/. ../backend/app/static/; else echo '🚫 Skipping copy in Docker'; fi",
-
-    "upload": "bash ../scripts/upload-to-s3.sh",
-    "deploy:static": "bash ../scripts/deploy-static-assets.sh",
-    "preserve:png": "bash ../scripts/preserve-png-images.sh",
-    "verify:png": "bash ../scripts/verify-png-images.sh",
-
-    "heroku-postbuild": "npm install && npm run build && npm run upload && npm run preserve:png",
-    "purge:cloudflare": "echo '🔄 Add curl call to Cloudflare API here'",
-
-    "lint": "eslint . --max-warnings 10",
-    "reorganize:assets": "bash ../scripts/reorganize-assets.sh"
-  },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.10.0",
