feat: Major Register component testing breakthrough (76% success rate)
- Enhanced .gitignore with Vitest, React, and task-specific patterns
- Improved Register component multi-step architecture understanding
- Fixed Register.test.jsx terms acceptance logic and navigation expectations
- Added comprehensive test utilities and backup files
- Updated CapeAIChat, Navbar, and Login components with testing improvements
- Achieved 22/29 tests passing (up from initial 0% success rate)
- Documented multi-step component testing methodology

Key Technical Achievements:
- Multi-step registration wizard architecture properly tested
- Terms acceptance flow corrected for component expectations
- renderWithProviders test helper integration completed
- Component navigation testing patterns established

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,10 @@ yarn-error.log*
 .cache/
 .temp/
 .tmp/
+# Vite specific
+.vite/
+# React specific
+.react/
 
 # Logs
 *.log
@@ -114,6 +118,13 @@ htmlcov/
 coverage/
 *.cover
 .hypothesis/
+# Vitest cache and reports
+.vitest/
+vitest.config.js.timestamp-*
+test-results/
+test-reports/
+# Jest cache
+.jest/
 
 # Local development
 *.local
@@ -151,6 +162,12 @@ kpi_metrics.csv
 resource_allocation.csv
 risk_register.csv
 localstorm_project_data.zip
+
+# Task-specific progress files
+TASK_*_PROGRESS_SUMMARY.md
+TASK_*_UPDATE.md
+REGISTER_COMPONENT_*.md
+*_BREAKTHROUGH.md
 
 # Non-essential development markdown files
 DEVELOPMENT_ROADMAP.md
