--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ h11==0.16.0
 idna==3.10
 passlib==1.7.4
 psycopg2-binary==2.9.10
+psutil==5.9.8
 pyasn1==0.6.1
 pydantic==2.11.7
 pydantic-settings==2.10.0
@@ -28,3 +29,8 @@ uvicorn==0.30.1
 greenlet==2.0.2
 aiosmtplib==3.0.1
 jinja2==3.1.4
+
+# AI Provider Dependencies (Task 2.1.1: Multi-Provider Support)
+openai>=1.12.0
+anthropic>=0.18.0
+redis>=4.5.4
