--- a/requirements.txt
+++ b/requirements.txt
@@ -33,4 +33,5 @@ jinja2==3.1.4
 # AI Provider Dependencies (Task 2.1.1: Multi-Provider Support)
 openai>=1.12.0
 anthropic>=0.18.0
+google-generativeai>=0.3.2  # Task 2.1.2: Gemini integration
 redis>=4.5.4
