--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,8 @@ openai>=1.12.0
 anthropic>=0.18.0
 google-generativeai>=0.3.2  # Task 2.1.2: Gemini integration
 redis>=4.5.4
+
+# ML Dependencies for Advanced Conversation Management (Task 2.2.2)
+numpy==2.3.2
+scikit-learn==1.7.1
+scipy==1.16.0
