--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,69 @@
-annotated-types==0.7.0
-anyio==4.9.0
-bcrypt==4.3.0
-click==8.2.1
-dnspython==2.7.0
-ecdsa==0.19.1
-email_validator==2.2.0
+# CapeAI Enterprise Platform - Production Dependencies
+# Optimized for Heroku deployment with multi-provider AI support
+
+# Core FastAPI Stack
 fastapi==0.115.13
-h11==0.16.0
-idna==3.10
-passlib==1.7.4
-psycopg2-binary==2.9.10
-psutil==5.9.8
-pyasn1==0.6.1
+uvicorn==0.30.1
+starlette==0.46.2
 pydantic==2.11.7
 pydantic-settings==2.10.0
 pydantic_core==2.33.2
-python-dotenv==1.1.0
-python-jose==3.5.0
 python-multipart==0.0.20
-rsa==4.9.1
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.41
-starlette==0.46.2
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-uvicorn==0.30.1
-greenlet==2.0.2
-aiosmtplib==3.0.1
-jinja2==3.1.4
 
-# AI Provider Dependencies (Task 2.1.1: Multi-Provider Support)
-openai>=1.12.0
-anthropic>=0.18.0
-google-generativeai>=0.3.2  # Task 2.1.2: Gemini integration
+# Database & ORM
+SQLAlchemy==2.0.41
+psycopg2-binary==2.9.10
+greenlet==2.0.2
+
+# Authentication & Security
+PyJWT==2.8.0
+bcrypt==4.3.0
+passlib==1.7.4
+python-jose==3.5.0
+python-dotenv==1.1.0
+email_validator==2.2.0
+
+# Redis for Caching & Session Management
 redis>=4.5.4
 
-# ML Dependencies for Advanced Conversation Management (Task 2.2.2)
+# AI Provider Dependencies (Multi-Provider Support)
+openai>=1.12.0
+anthropic>=0.18.0
+google-generativeai>=0.3.2
+
+# ML Dependencies for Advanced Analytics & 5D Quality Scoring
 numpy==2.3.2
 scikit-learn==1.7.1
 scipy==1.16.0
 
-# User Agent Parsing for Audit Logging (Task 1.2.6)
+# Enterprise Monitoring & Analytics
+psutil==5.9.8
 user-agents>=2.2.0
+
+# Email & Notifications
+aiosmtplib==3.0.1
+jinja2==3.1.4
+
+# HTTP Client for API integrations
+httpx>=0.25.0
+
+# Core Python Dependencies
+annotated-types==0.7.0
+anyio==4.9.0
+click==8.2.1
+dnspython==2.7.0
+ecdsa==0.19.1
+h11==0.16.0
+idna==3.10
+pyasn1==0.6.1
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+
+# Additional Enterprise Dependencies for Production
+gunicorn>=21.2.0
+whitenoise>=6.6.0
+sentry-sdk[fastapi]>=1.38.0
+prometheus-client>=0.19.0
